--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "593df276-027f-48ba-bc66-e86c75c69e1b",
    "metadata": {},
    "outputs": [
@@ -51,8 +51,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "501d4aea-2942-4ff0-b809-1fa248c37543",
+   "metadata": {},
+   "source": [
+    "Methods\n",
+    "1. Data cleaning. \n",
+    "We will load the raw data set into R and cleaning it. By doing so, we will remove any unnecessary columns, check for missing values, and ensure that the data types are correctly assigned.\n",
+    "\n",
+    "2. Visualize Data. \n",
+    "Next, we will explore the data to learn more about the relationship between the variables. We will create visualizations such as scatterplots to identify any trends or potential outliers in the data.\n",
+    "\n",
+    "3. Select Variables. \n",
+    "After exploring the data, we will select two variables for prediction. In this project, we will use roundness and area as they are the most relevant variables for predicting the type of bean.\n",
+    "\n",
+    "4. Model the Data. \n",
+    "Then, we will create a khnn classification model using the variables roundness and area as predictors. I will first split the data into a training set and testing set, and perform cross-validation model for different values of k. After, we will chose the best k that gives the highest accuracy. \n",
+    "\n",
+    "5. Visualization.\n",
+    "Finally, we will create a scatterplot of the data points with different colors representing the different types of beans. By doing so, we can visualize how well the model separates the different types of beans based on the two predictors. We will also create a confusion matrix to show the number of correct and incorrect predictions made by the model for each type of bean.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6f3286c6-b9d0-42c5-b6a1-68cfbe89bef4",
    "metadata": {},
    "outputs": [
@@ -208,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "68946c69-89e6-431f-b4d8-42bd973ea522",
    "metadata": {},
    "outputs": [
@@ -287,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "080b9380-0777-49c8-b2b9-445f5eb143f2",
    "metadata": {},
    "outputs": [],
@@ -301,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "4125a8d2-5930-42ff-8b87-65fbccaf9b8d",
    "metadata": {},
    "outputs": [
@@ -335,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "3d730416-231b-480e-8326-e426ef1f17e1",
    "metadata": {},
    "outputs": [
@@ -415,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "b4638905-c0e6-4037-b0b4-02d37e18955b",
    "metadata": {},
    "outputs": [
@@ -496,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "4b5afa28-cb6e-4d5d-b2e9-4e7e4c893eb4",
    "metadata": {},
    "outputs": [
@@ -614,14 +636,6 @@
     "                     Std_Deviation = sd(values))\n",
     "features_dist"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fde7ff48-1477-49ac-9697-4e58293eb634",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
