Changes to methods

--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -63,7 +63,7 @@
     "Next, we will explore the data to learn more about the relationship between the variables. We will create visualizations such as scatterplots to identify any trends or potential outliers in the data.\n",
     "\n",
     "3. Select Variables. \n",
-    "After exploring the data, we will select two variables for prediction. In this project, we will use roundness and area as they are the most relevant variables for predicting the type of bean.\n",
+    "After exploring the data, we will select two variables for prediction. In this project, we will use roundness and area as they are the most relevant variables for predicting the type of bean based on the physical dimensions (height and w \n",
     "\n",
     "4. Model the Data. \n",
     "Then, we will create a khnn classification model using the variables roundness and area as predictors. I will first split the data into a training set and testing set, and perform cross-validation model for different values of k. After, we will chose the best k that gives the highest accuracy. \n",
