--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -54,6 +54,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "952d0642-be11-4696-b6c4-e169b4e24bf0",
+   "metadata": {},
+   "source": [
+    "Introduction:\n",
+    "\n",
+    "This dataset is based on 13611 images of 7 types of individual dry beans with similar features. Each image was analyzed for 16 features of the bean (4 \"shape factors\", 12 structural/geometric features). \n",
+    "\n",
+    "The question we will be answering is whether we can determine the bean type in an image based on the measured physical measurements of the bean."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f0db5e86",
    "metadata": {},
    "source": [
