--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f07b85b8-2a11-4f63-bb20-58b307df4af4",
+   "metadata": {},
+   "source": [
+    "# Bean Classification Project Proposal "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "2935b3bf",
@@ -57,7 +65,7 @@
    "id": "952d0642-be11-4696-b6c4-e169b4e24bf0",
    "metadata": {},
    "source": [
-    "Introduction:\n",
+    "# Introduction\n",
     "\n",
     "This dataset is based on 13611 images of 7 types of individual dry beans with similar features. Each image was analyzed for 16 features of the bean (4 \"shape factors\", 12 structural/geometric features). \n",
     "\n",
@@ -66,24 +74,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0db5e86",
+   "id": "283854a8-8139-4f77-89b5-baddc74241c1",
    "metadata": {},
    "source": [
-    "Methods\n",
-    "1. Data cleaning. \n",
-    "We will load the raw data set into R and cleaning it. By doing so, we will remove any unnecessary columns, check for missing values, and ensure that the data types are correctly assigned.\n",
-    "\n",
-    "2. Visualize Data. \n",
-    "Next, we will explore the data to learn more about the relationship between the variables. We will create visualizations such as scatterplots to identify any trends or potential outliers in the data.\n",
-    "\n",
-    "3. Select Variables. \n",
-    "After exploring the data, we will select two variables for prediction. In this project, we will use roundness and area as they are the most relevant variables for predicting the type of bean based on the physical dimensions (height and w \n",
-    "\n",
-    "4. Model the Data. \n",
-    "Then, we will create a khnn classification model using the variables roundness and area as predictors. I will first split the data into a training set and testing set, and perform cross-validation model for different values of k. After, we will chose the best k that gives the highest accuracy. \n",
-    "\n",
-    "5. Visualization.\n",
-    "Finally, we will create a scatterplot of the data points with different colors representing the different types of beans. By doing so, we can visualize how well the model separates the different types of beans based on the two predictors. We will also create a confusion matrix to show the number of correct and incorrect predictions made by the model for each type of bean.\n"
+    "# Preliminary exploratory data analysis"
    ]
   },
   {
@@ -649,6 +643,47 @@
     "                      Max = max(values),\n",
     "                     Std_Deviation = sd(values))\n",
     "features_dist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0db5e86",
+   "metadata": {},
+   "source": [
+    "# Methods\n",
+    "1. Data cleaning. \n",
+    "We will load the raw data set into R and cleaning it. By doing so, we will remove any unnecessary columns, check for missing values, and ensure that the data types are correctly assigned.\n",
+    "\n",
+    "2. Visualize Data. \n",
+    "Next, we will explore the data to learn more about the relationship between the variables. We will create visualizations such as scatterplots to identify any trends or potential outliers in the data.\n",
+    "\n",
+    "3. Select Variables. \n",
+    "After exploring the data, we will select two variables for prediction. In this project, we will use roundness and area as they are the most relevant variables for predicting the type of bean based on the physical dimensions (height and w \n",
+    "\n",
+    "4. Model the Data. \n",
+    "Then, we will create a khnn classification model using the variables roundness and area as predictors. I will first split the data into a training set and testing set, and perform cross-validation model for different values of k. After, we will chose the best k that gives the highest accuracy. \n",
+    "\n",
+    "5. Visualization.\n",
+    "Finally, we will create a scatterplot of the data points with different colors representing the different types of beans. By doing so, we can visualize how well the model separates the different types of beans based on the two predictors. We will also create a confusion matrix to show the number of correct and incorrect predictions made by the model for each type of bean.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a64ea2b0-4bc1-47bd-b2c9-47cf53401e9e",
+   "metadata": {},
+   "source": [
+    "# Expected outcomes and significance\n",
+    "\n",
+    "- What do you expect to find?\n",
+    "With the help of a classification model, we expect to find a well-performing model that can predict the type of beans based on their roundness and area with high accuracy. On the visualization, we also expect to see a cluster for different types of bean in various colors.  \n",
+    "\n",
+    "- What impact could such findings have?\n",
+    "This classification model can impact the food and agriculture industry. An automated system can be created to classifiy the type of bean based on their physical appearance. This is espcially useful when food and agriculture companies collect different types of beans together, dry them, and want to package them based on different types. The model we built can help to streamline the service, gain quality control and reduce the time for people to manually separate the beans. \n",
+    "\n",
+    "- What future questions could this lead to?\n",
+    "Can other variables such as major axis length or the perimeter be good predictors of the type? And are they better predictors than roundness and area?\n",
+    "\n",
+    "Can the classification model be used for different types of crops such as rice? "
    ]
   }
  ],
