Changes to intro/methods/expected outcomes

--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2935b3bf",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
       "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Search for functions across packages at \u001b[32mhttps://www.tidymodels.org/find/\u001b[39m\n",
+      "\u001b[34m•\u001b[39m Learn how to get started at \u001b[32mhttps://www.tidymodels.org/start/\u001b[39m\n",
       "\n"
      ]
     }
@@ -69,7 +69,7 @@
     "\n",
     "This dataset is based on 13611 images of 7 types of individual dry beans with similar features. Each image was analyzed for 16 features of the bean (4 \"shape factors\", 12 structural/geometric features). \n",
     "\n",
-    "The question we will be answering is whether we can determine the bean type in an image based on the measured physical measurements of the bean."
+    "The question we will be answering is whether we can determine the bean type in an image based on the measured physical measurements of the bean. We will be using K-nearest neighbors classification to predict \"Class\" using the predictors \"Area\", and \"roundness\". "
    ]
   },
   {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "56be9ba1",
    "metadata": {},
    "outputs": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6e02f08d",
    "metadata": {},
    "outputs": [
@@ -317,12 +317,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "6e33b801",
    "metadata": {},
    "outputs": [],
    "source": [
     "##Creating training and testing dataset\n",
+    "\n",
     "set.seed(2022)\n",
     "bean_split <- initial_split(bean, prop = 0.75, strata = Class)\n",
     "bean_train <- training(bean_split)\n",
@@ -331,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e4321d5e",
    "metadata": {},
    "outputs": [
@@ -353,6 +354,7 @@
    ],
    "source": [
     "#Graphing the training dataset\n",
+    "\n",
     "area_ecc <- bean_train |>\n",
     "  ggplot(aes(x = Area, y = roundness, color = Class)) +\n",
     "  geom_point(alpha = 0.5) +\n",
@@ -365,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4a72b54b",
    "metadata": {},
    "outputs": [
@@ -436,6 +438,7 @@
    ],
    "source": [
     "#Summarize training dataset\n",
+    "\n",
     "bean_class_dist <- bean_train |>\n",
     "                group_by(Class)|>\n",
     "                summarize(count = n()) |>\n",
@@ -445,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "647589c4",
    "metadata": {},
    "outputs": [
@@ -526,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4fef12ce",
    "metadata": {},
    "outputs": [
@@ -633,6 +636,7 @@
    ],
    "source": [
     "#Statistical Distribution in Features of varieties of dry bean\n",
+    "\n",
     "features_dist <- bean_train |>\n",
     "            pivot_longer(cols= Area:ShapeFactor4,\n",
     "                         names_to = \"Features\",\n",
@@ -651,20 +655,20 @@
    "metadata": {},
    "source": [
     "# Methods\n",
-    "1. Data cleaning. \n",
-    "We will load the raw data set into R and cleaning it. By doing so, we will remove any unnecessary columns, check for missing values, and ensure that the data types are correctly assigned.\n",
+    "1. Data cleaning\n",
+    "- We will load the raw data set into R and cleaning it. \n",
     "\n",
-    "2. Visualize Data. \n",
-    "Next, we will explore the data to learn more about the relationship between the variables. We will create visualizations such as scatterplots to identify any trends or potential outliers in the data.\n",
+    "2. Visualize Data\n",
+    "- Next, we will create visualizations such as scatterplots to identify any trends or potential outliers in the data.\n",
     "\n",
-    "3. Select Variables. \n",
-    "After exploring the data, we will select two variables for prediction. In this project, we will use roundness and area as they are the most relevant variables for predicting the type of bean based on the physical dimensions (height and w \n",
+    "3. Select Variables\n",
+    "- We will then select two variables: roundness and area as they are the most relevant variables for predicting the type of bean based on the physical dimensions (height and weight). \n",
     "\n",
-    "4. Model the Data. \n",
-    "Then, we will create a khnn classification model using the variables roundness and area as predictors. I will first split the data into a training set and testing set, and perform cross-validation model for different values of k. After, we will chose the best k that gives the highest accuracy. \n",
+    "4. Model the Data\n",
+    "- We will create a k-nearest neighbors (KNN) classification model using roundness and area as predictors. First, we will split the data into a training set and a testing set. Next, we will perform cross-validation by fitting the KNN model with different values of k on the training set. The testing set (has untrained data) will be used to evaluate the generalizability of the model and avoid bias. By using unseen data, we can assess the model's ability to classify new observations accurately. Finally, the testing data will be used to assess the accuracy of the KNN model for each k value, and the k value with the highest accuracy will be chosen as the optimal parameter for the model.racy as the optimal parameter for our model.\n",
     "\n",
-    "5. Visualization.\n",
-    "Finally, we will create a scatterplot of the data points with different colors representing the different types of beans. By doing so, we can visualize how well the model separates the different types of beans based on the two predictors. We will also create a confusion matrix to show the number of correct and incorrect predictions made by the model for each type of bean.\n"
+    "5. Visualization\n",
+    "- We'll make a scatterplot with colored data points for each bean type to visualize the model's performance in separating them based on the two predictors. Additionally, we'll create a confusion matrix to display the model's correct and incorrect predictions for each bean type.\n"
    ]
   },
   {
@@ -674,17 +678,24 @@
    "source": [
     "# Expected outcomes and significance\n",
     "\n",
-    "- What do you expect to find?\n",
-    "With the help of a classification model, we expect to find a well-performing model that can predict the type of beans based on their roundness and area with high accuracy. On the visualization, we also expect to see a cluster for different types of bean in various colors.  \n",
+    "What do we expect to find?\n",
+    "- With the help of a classification model, we expect to find a well-performing model that can predict the type of beans based on their roundness and area with high accuracy. On the visualization, we also expect to see a cluster for different types of bean in various colors.  \n",
     "\n",
-    "- What impact could such findings have?\n",
-    "This classification model can impact the food and agriculture industry. An automated system can be created to classifiy the type of bean based on their physical appearance. This is espcially useful when food and agriculture companies collect different types of beans together, dry them, and want to package them based on different types. The model we built can help to streamline the service, gain quality control and reduce the time for people to manually separate the beans. \n",
+    "What impact could such findings have?\n",
+    "- This classification model can impact the food and agriculture industry. An automated system can be created to classifiy the type of bean based on their physical appearance. This is espcially useful when food and agriculture companies collect different types of beans together, dry them, and want to package them based on different types. The model we built can help to streamline the service, gain quality control and reduce the time for people to manually separate the beans. \n",
     "\n",
-    "- What future questions could this lead to?\n",
-    "Can other variables such as major axis length or the perimeter be good predictors of the type? And are they better predictors than roundness and area?\n",
-    "\n",
-    "Can the classification model be used for different types of crops such as rice? "
+    "What future questions could this lead to?\n",
+    "- Can other variables such as major axis length or the perimeter be good predictors of the type? And are they better predictors than roundness and area?\n",
+    "- Can the classification model be used for different types of crops such as rice? "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b12bb169-94fc-4ee6-977e-e688332ea06e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
