box plot observations and move cells

--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -839,16 +839,8 @@
     "## References ##:\n",
     "- Krzywinski, Martin, and Naomi Altman. \"Visualizing samples with box plots: use box plots to illustrate the spread and differences of samples.\" Nature Methods, vol. 11, no. 2, Feb. 2014, pp. 119+. Gale OneFile: Health and Medicine, link.gale.com/apps/doc/A361242515/HRCA?u=ubcolumbia&sid=bookmark-HRCA&xid=0db0fe06. Accessed 11 Mar. 2023.\n",
     "\n",
-    "- "
+    "- Koklu, M., & Ozkan, I. A. (2020). Multiclass classification of dry beans using computer vision and machine learning techniques. Computers and Electronics in Agriculture, 174, 105507. https://doi.org/10.1016/j.compag.2020.105507"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1c7fd72-1744-4f6d-83a3-f47f06075245",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
