Final proposal commit

--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -679,7 +679,10 @@
   {
    "cell_type": "markdown",
    "id": "465ad4cd",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Methods\n",
     "1. Data cleaning\n",
