Upsample the training dataset

--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 69,
    "id": "c8ba6582",
    "metadata": {},
    "outputs": [
@@ -789,7 +789,7 @@
    ],
    "source": [
     "#Graphing area distribution for each type of bean\n",
-    "area_box_plot <- bean_train |>\n",
+    "area_box_plot <- final_bean_data |>\n",
     "                ggplot(aes(x = Class, y = Area))+\n",
     "                geom_boxplot()+\n",
     "                xlab(\"Type of beans\")+\n",
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 70,
    "id": "9c9f2a0a",
    "metadata": {},
    "outputs": [
@@ -823,7 +823,7 @@
    ],
    "source": [
     "#Graphing box plot showing roundness distribution for each type of box plot\n",
-    "roundness_box_plot <- bean_train |>\n",
+    "roundness_box_plot <- final_bean_data |>\n",
     "                ggplot(aes(x = Class, y = roundness))+\n",
     "                geom_boxplot()+\n",
     "                xlab(\"Type of beans\")+\n",
