--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "31c75def",
    "metadata": {},
    "outputs": [
@@ -18,42 +18,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "also installing the dependencies ‘RANN’, ‘ROSE’\n",
-      "\n",
-      "\n",
       "Updating HTML index of packages in '.Library'\n",
       "\n",
       "Making 'packages.html' ...\n",
       " done\n",
-      "\n",
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.1 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.6     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.7     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.9\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.0     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.2     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
-      "\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\n",
-      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 1.0.0 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mbroom       \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mrsample     \u001b[39m 1.0.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mdials       \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mtune        \u001b[39m 1.0.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34minfer       \u001b[39m 1.0.2     \u001b[32m✔\u001b[39m \u001b[34mworkflows   \u001b[39m 1.0.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata   \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mworkflowsets\u001b[39m 1.0.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mparsnip     \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34myardstick   \u001b[39m 1.0.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mrecipes     \u001b[39m 1.0.1     \n",
-      "\n",
-      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Use suppressPackageStartupMessages() to eliminate package startup messages\n",
       "\n"
      ]
     }
@@ -85,10 +53,14 @@
    "source": [
     "# Introduction\n",
     "\n",
+    "This data set was extracted from the article written by Kolku and Ozkan, “Multiclass classification of dry beans using computer vision and machine learning techniques” (2020). Koluk and Ozkan (2020) explore the use of computer vision and machine learning techniques to classify dry beans into different classes. The goal of the study was to use machine learning algorithms to accurately classify the dry beans into their respective varieties based on the extracted features. This study is relevant for the food industry and agriculture, as it can potentially help in automating the classification process of dry beans, which is currently done manually and is time-consuming.\n",
+    "\n",
+    "Research Question: Can we determine the bean type in an image based on its dimensional features?\n",
+    "\n",
     "This dataset is based on 13611 images of 7 types of individual dry beans with similar features. Each image was analyzed for 16 features of the bean (4 \"shape factors\", 12 structural/geometric features) (Kolku & Ozkan, 2020).\n",
     "\n",
+    "The most effective dimensional features in the dataset, are called: \"Area\", \"Perimeter\", \"Major Axis Length\", \"Minor Axis Length\", \"Aspect Ratio\", \"Eccentricity\", \"Convex Area\", \"Equivalent Diameter\", \"Extent\", \"Solidity\", \"Roundness\", \"Compactness\". We will be using the K-nearest neighbours classification to predict \"Class\" using the mentioned predictors. K-nearest neighbours find the K-closest data points to the input sample and assign the most common class label among them. The accuracy of the model can be improved by tuning the value of K.\n",
     "\n",
-    "The question we will be answering is whether we can determine the bean type in an image based on their dimensional features. The most effective dimensional features in the dataset, are called: \"Area\", \"Perimeter\", \"Major Axis Length\", \"Minor Axis Length\", \"Aspect Ratio\", \"Eccentricity\", \"Convex Area\", \"Equivalent Diameter\", \"Extent\", \"Solidity\", \"Roundness\", \"Compactness\". We will be using K-nearest neighbors classification to predict \"Class\" using the mentioned predictors.\n",
     "\n",
     "Our variable of intetrest (Kolku & Ozkan, 2020).:\n",
     "- **Area**:The area of a bean zone and the number of pixels within its boundaries.\n",
