--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -616,7 +616,7 @@
    "id": "bbdcc8b2",
    "metadata": {},
    "source": [
-    "By looking at the table viewing the total number of datapoints for each type of beans, we can see that there are a big difference in number of datapoints between Dermason bean type with other type of beans. Therefore, we will upsample the training dataset so that each Class of bean has a voting power when it comes to the classfication of the testing dataset"
+    "Upsampling: y looking at the table viewing the total number of datapoints for each type of beans, we can see that there are a big difference in number of datapoints between Dermason bean type with other type of beans. Therefore, we will upsample the training dataset so that each Class of bean has a voting power when it comes to the classfication of the testing dataset"
    ]
   },
   {
@@ -672,7 +672,7 @@
    "id": "48e17637",
    "metadata": {},
    "source": [
-    "Next we will look at Statistical distribution of our chosen variables, in table and boxplot form"
+    "Summary of the data set: Next we will look at Statistical distribution of our chosen variables, in table and boxplot form. We calculated the basic statistics such as range and standard deviation for each feature, as well as determining the distribution. \n"
    ]
   },
   {
@@ -900,7 +900,6 @@
    "cell_type": "markdown",
    "id": "167944ac",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -919,24 +918,6 @@
     "\n",
     "5. Visualization\n",
     "- We'll make a scatterplot with colored data points for each bean type to visualize the model's performance in separating them based on the two predictors. Additionally, we'll create a confusion matrix to display the model's correct and incorrect predictions for each bean type.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2c33b507",
-   "metadata": {},
-   "source": [
-    "# Expected outcomes and significance\n",
-    "\n",
-    "What do we expect to find?\n",
-    "- With the help of a classification model, we expect to find a well-performing model that can predict the type of beans based on their roundness and area with high accuracy. On the visualization, we also expect to see a cluster for different types of bean in various colors.  \n",
-    "\n",
-    "What impact could such findings have?\n",
-    "- This classification model can impact the food and agriculture industry. An automated system can be created to classifiy the type of bean based on their physical appearance. This is espcially useful when food and agriculture companies collect different types of beans together, dry them, and want to package them based on different types. The model we built can help to streamline the service, gain quality control and reduce the time for people to manually separate the beans. \n",
-    "\n",
-    "What future questions could this lead to?\n",
-    "- Can other variables such as major axis length or the perimeter be good predictors of the type? And are they better predictors than roundness and area?\n",
-    "- Can the classification model be used for different types of crops such as rice? "
    ]
   },
   {
@@ -1037,7 +1018,19 @@
    "id": "3fab009f-c456-4b35-9290-7f34299f52cc",
    "metadata": {},
    "source": [
-    "From the graph above we can see that with such a large dataset like the bean dataset, large number of neighbour is required to predict the data accurately. However, running cross validation for such a large dataset and large number of neighbors take a lot of time, and money, so we decided only estimate accuracies of different number of neighbors up until 45 neighbors. And it is clear that after 27 neighbours, the accuracies of different number of neighbors decreases, and the accuracies keeps decreasing until 40 neighbors, so we suspect that it will still decrease into 50 and 100 neighbors. From the graph we can see that the highest accuracies is around 25-27 neighbours. And we see that around 25 neighbors is good since the 26 neighbours, and 24 neighbours, the accuracies aren't that much different from the 25 neighbours"
+    "From the graph above we can see that with such a large dataset like the bean dataset, large number of neighbour is required to predict the data accurately. \n",
+    "\n",
+    "However, running cross validation for such a large dataset and large number of neighbors take a lot of time, and money, so we decided only estimate accuracies of different number of neighbors up until 45 neighbors. And it is clear that after 27 neighbours, the accuracies of different number of neighbors decreases, and the accuracies keeps decreasing until 40 neighbors, so we suspect that it will still decrease into 50 and 100 neighbors. \n",
+    "\n",
+    "From the graph we can see that the highest accuracies is around 25-27 neighbours. And we see that around 25 neighbors is good since the 26 neighbours, and 24 neighbours, the accuracies aren't that much different from the 25 neighbours. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f1a1c54-eb30-4c88-af63-6bb1f2265e3d",
+   "metadata": {},
+   "source": [
+    "Visualizations of the analysis: a confusion matrix is shown below to help interpret the results and communicate the findings effectively.\n"
    ]
   },
   {
@@ -1173,6 +1166,24 @@
     "    ggtitle(\"True Class of Beans\")\n",
     "\n",
     "plot_grid(bean_predictions_plot, bean_trueclass_plot, ncol = 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c33b507",
+   "metadata": {},
+   "source": [
+    "# Expected outcomes and significance\n",
+    "\n",
+    "What do we expect to find?\n",
+    "- With the help of a classification model, we expect to find a well-performing model that can predict the type of beans based on their roundness and area with high accuracy. On the visualization, we also expect to see a cluster for different types of bean in various colors.  \n",
+    "\n",
+    "What impact could such findings have?\n",
+    "- This classification model can impact the food and agriculture industry. An automated system can be created to classifiy the type of bean based on their physical appearance. This is espcially useful when food and agriculture companies collect different types of beans together, dry them, and want to package them based on different types. The model we built can help to streamline the service, gain quality control and reduce the time for people to manually separate the beans. \n",
+    "\n",
+    "What future questions could this lead to?\n",
+    "- Can other variables such as major axis length or the perimeter be good predictors of the type? And are they better predictors than roundness and area?\n",
+    "- Can the classification model be used for different types of crops such as rice? "
    ]
   },
   {
