--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -541,16 +541,16 @@
    "source": [
     "# Discussion\n",
     "\n",
-    "Summary of Results\n",
+    "**Results**\n",
     "\n",
     "\n",
-    "What do we expect to find?\n",
+    "Expect to find?\n",
     "- With the help of a classification model, we expect to find a well-performing model that can predict the type of beans based on their roundness and area with high accuracy. On the visualization, we also expect to see a cluster for different types of bean in various colors.  \n",
     "\n",
-    "What impact could such findings have?\n",
+    "**Findings Impact**\n",
     "- This classification model can impact the food and agriculture industry. An automated system can be created to classifiy the type of bean based on their physical appearance. This is espcially useful when food and agriculture companies collect different types of beans together, dry them, and want to package them based on different types. The model we built can help to streamline the service, gain quality control and reduce the time for people to manually separate the beans. \n",
     "\n",
-    "What future questions could this lead to?\n",
+    "**Future research questions**\n",
     "- Can other variables such as major axis length or the perimeter be good predictors of the type? And are they better predictors than roundness and area?\n",
     "- Can the classification model be used for different types of crops such as rice? "
    ]
@@ -560,7 +560,7 @@
    "id": "d1dd2864",
    "metadata": {},
    "source": [
-    "###### References:\n",
+    "# References:\n",
     "- Krzywinski, Martin, and Naomi Altman. \"Visualizing samples with box plots: use box plots to illustrate the spread and differences of samples.\" Nature Methods, vol. 11, no. 2, Feb. 2014, pp. 119+. Gale OneFile: Health and Medicine, link.gale.com/apps/doc/A361242515/HRCA?u=ubcolumbia&sid=bookmark-HRCA&xid=0db0fe06. Accessed 11 Mar. 2023.\n",
     "\n",
     "- Koklu, M., & Ozkan, I. A. (2020). Multiclass classification of dry beans using computer vision and machine learning techniques. Computers and Electronics in Agriculture, 174, 105507. https://doi.org/10.1016/j.compag.2020.105507"
