--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -543,12 +543,11 @@
     "\n",
     "**Results**\n",
     "\n",
-    "\n",
-    "Expect to find?\n",
-    "- With the help of a classification model, we expect to find a well-performing model that can predict the type of beans based on their roundness and area with high accuracy. On the visualization, we also expect to see a cluster for different types of bean in various colors.  \n",
+    "With the help of a classification model, we expect to find a well-performing model that can predict the type of beans based on their roundness and area with at least 85% accuracy. On the visualization, we also expect to see a cluster for different types of bean in various colors. From the consution matrix, the result of the k-nearest neighbors (k-NN) model shows an estimated accuracy of 0.8793103. This means that the model was able to correctly classify 87.93% of the beans in the dataset based on their area and roundness. This is a relatively high accuracy as the classes are similar in appearance and is difficult to differentiate based on these features alone. \n",
     "\n",
     "**Findings Impact**\n",
-    "- This classification model can impact the food and agriculture industry. An automated system can be created to classifiy the type of bean based on their physical appearance. This is espcially useful when food and agriculture companies collect different types of beans together, dry them, and want to package them based on different types. The model we built can help to streamline the service, gain quality control and reduce the time for people to manually separate the beans. \n",
+    "\n",
+    "This classification model can impact the food and agriculture industry. An automated system can be created to classifiy the type of bean based on their physical appearance. This is espcially useful when food and agriculture companies collect different types of beans together, dry them, and want to package them based on different types. The model we built can help to streamline the service, gain quality control and reduce the time for people to manually separate the beans. \n",
     "\n",
     "**Future research questions**\n",
     "- Can other variables such as major axis length or the perimeter be good predictors of the type? And are they better predictors than roundness and area?\n",
