added cowplot and ggplot 2 to initial library code cell

--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -21,7 +21,9 @@
     "library(repr)\n",
     "library(tidymodels)\n",
     "options(repr.matrix.max.rows = 16)\n",
-    "library(readxl)"
+    "library(readxl)\n",
+    "library(ggplot2)\n",
+    "library(cowplot)"
    ]
   },
   {
@@ -516,8 +518,6 @@
    "outputs": [],
    "source": [
     "#visual comparison of true class vs predicted class\n",
-    "library(ggplot2)\n",
-    "library(cowplot)\n",
     "\n",
     "bean_predictions_plot <- bean_predictions |>\n",
     "    ggplot(aes(x = Area, y = roundness, color = .pred_class)) +\n",
