--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -89,26 +89,16 @@
     "\n",
     "This data set was extracted from the article written by Kolku and Ozkan, “Multiclass classification of dry beans using computer vision and machine learning techniques” (2020). Koluk and Ozkan (2020) explore the use of computer vision and machine learning techniques to classify dry beans into different classes. The goal of the study was to use machine learning algorithms to accurately classify the dry beans into their respective varieties based on the extracted features. This study is relevant for the food industry and agriculture, as it can potentially help in automating the classification process of dry beans, which is currently done manually and is time-consuming.\n",
     "\n",
-    "**Research Question**: Can we determine the bean type in an image based on its dimensional features?\n",
+    "**Research Question**: Can we determine the bean type in an image based on its dimensional features, especially base on the bean image's Area and Roundness?\n",
     "\n",
     "This dataset is based on 13611 images of 7 types of individual dry beans with similar features. Each image was analyzed for 16 features of the bean (4 \"shape factors\", 12 structural/geometric features) (Kolku & Ozkan, 2020).\n",
     "\n",
-    "The most effective dimensional features in the dataset, are called: \"Area\", \"Perimeter\", \"Major Axis Length\", \"Minor Axis Length\", \"Aspect Ratio\", \"Eccentricity\", \"Convex Area\", \"Equivalent Diameter\", \"Extent\", \"Solidity\", \"Roundness\", \"Compactness\". We will be using the K-nearest neighbours classification to predict \"Class\" using the mentioned predictors. K-nearest neighbours find the K-closest data points to the input sample and assign the most common class label among them. The accuracy of the model can be improved by tuning the value of K.\n",
+    "One of the dimensional features in the dataset that we want to use, are called: \"Area\", \"Roundness\". We will be using the K-nearest neighbours classification to predict \"Class\" using the mentioned predictors. K-nearest neighbours find the K-closest data points to the input sample and assign the most common class label among them. The accuracy of the model can be improved by tuning the value of K.\n",
     "\n",
     "\n",
     "Our variable of intetrest (Kolku & Ozkan, 2020).:\n",
-    "- **Area**:The area of a bean zone and the number of pixels within its boundaries.\n",
-    "- **Perimeter**: Bean circumference is defined as the length of its border.\n",
-    "- **Major Axis Length**: The distance of the longest line that can be drawn on the bean\n",
-    "- **Minor Axis Length**: The longest line that can be drawn on the bean while standing perpendicular to the axis\n",
-    "- **Aspect Ratio**: The relationship between the Major Axis Length and the Minor Axis Length\n",
-    "- **Eccentricity**: Eccentricity of the ellipse having the same moments as the region.\n",
-    "- **Convex Area**: Number of pixels in the smallest convex polygon that can contain the area of a bean seed.\n",
-    "- **Equivalent Diameter**: The diameter of a circle that has the same area as the bean area\n",
-    "- **Solidity**: The ratio of the pixels in the convex shell to those found in beans.\n",
-    "- **Extent**: The ratio of the pixels in the bounding box to the bean area.\n",
-    "- **Roundess**: Calculated with the following formula: (4piA)/(P^2). Where A is the area and P is the perimeter of the bean\n",
-    "- **Compactness**: Roundness of the bean in measurement"
+    "- **Area**: The area of a bean zone and the number of pixels within its boundaries.\n",
+    "- **Roundness**: Calculated with the following formula: (4piA)/(P^2). Where A is the area and P is the perimeter of the bean"
    ]
   },
   {
