--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -10,25 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "cbe45c1e-ecbb-4793-b803-00e624b6b055",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Installing package into ‘/home/jupyter/R/x86_64-pc-linux-gnu-library/4.2’\n",
-      "(as ‘lib’ is unspecified)\n",
-      "\n",
-      "Installing package into ‘/home/jupyter/R/x86_64-pc-linux-gnu-library/4.2’\n",
-      "(as ‘lib’ is unspecified)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "install.packages(\"cowplot\")\n",
     "install.packages(\"kknn\")\n",
@@ -37,31 +24,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "31c75def",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Installing package into ‘/home/jupyter/R/x86_64-pc-linux-gnu-library/4.2’\n",
-      "(as ‘lib’ is unspecified)\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "ERROR",
-     "evalue": "Error in library(tidymodels): there is no package called ‘tidymodels’\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in library(tidymodels): there is no package called ‘tidymodels’\nTraceback:\n",
-      "1. library(tidymodels)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#import libraries\n",
     "install.packages(\"themis\")\n",
@@ -95,7 +63,7 @@
     "\n",
     "This data set was extracted from the article written by Kolku and Ozkan, “Multiclass classification of dry beans using computer vision and machine learning techniques” (2020). Koluk and Ozkan (2020) explore the use of computer vision and machine learning techniques to classify dry beans into different classes. The goal of the study was to use machine learning algorithms to accurately classify the dry beans into their respective varieties based on the extracted features. This study is relevant for the food industry and agriculture, as it can potentially help in automating the classification process of dry beans, which is currently done manually and is time-consuming.\n",
     "\n",
-    "**Research Question**: Can we determine the bean type in an image based on its Area and Roundness?\n",
+    "**Research Question**: Can we accurately predict the bean type in an image based on the predictors Area and Roundness?\n",
     "\n",
     "This dataset is based on 13611 images of 7 types of individual dry beans with similar features. Each image was analyzed for 16 features of the bean (4 \"shape factors\", 12 structural/geometric features) (Kolku & Ozkan, 2020). While the dataset use up to 12 predictors to classify the data points, we will try to reduce the number of the predictor and see if the accuracy of the estimate still has high or nearly has high.\n",
     "\n",
@@ -120,26 +88,17 @@
    "id": "4446a1c8-968a-4cd2-8849-e16a2329e7aa",
    "metadata": {},
    "source": [
-    "**Load Data**: A zip file was loaded from the original web source (https). Then, we create a temporary file path to store the 'temp' variable, to temporarily store the downloaded zip file before it is extracted. Then, we use 'download.fil' to download the zip file and save it in 'temp'. Nextm the unzip() function extracts the xlsx file from the downloaded zip file and saves it in the 'beanzip' filepath. Finally, the read_excel file reads the xlsx file and we named our the data frame 'bean'. \n"
+    "**Load Data**: A zip file was loaded from the original web source (https). Then, we create a temporary file path to store the 'temp' variable, to temporarily store the downloaded zip file before it is extracted. Next, we use 'download.fil' to download the zip file and save it in 'temp'. The unzip() function extracts the xlsx file from the downloaded zip file and saves it in the 'beanzip' filepath. Finally, the read_excel file reads the xlsx file and we named our the data frame 'bean'. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "dc02201e",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in read_excel(beanzip): could not find function \"read_excel\"\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in read_excel(beanzip): could not find function \"read_excel\"\nTraceback:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "beanurl<-\"https://archive.ics.uci.edu/ml/machine-learning-databases/00602/DryBeanDataset.zip\"\n",
     "temp <- tempfile()\n",
@@ -162,7 +121,7 @@
    "id": "b61ee2bd",
    "metadata": {},
    "source": [
-    "**Select variables & data wrangling & cleaning**: After exploring the data and doing research, we will select two variables for prediction: roundness and area, as according to our research question, and since these two variable produce distinct clusters by bean type, which is helpful in classifying the datapoints (as seen later on in *Figure 1*)."
+    "**Select variables & data wrangling & cleaning**: After exploring the data and doing research, we will select two variables for prediction: roundness and area. According to a study published in the Journal of Food Engineering (2012), area and roundness were among the most important features for accurate classification (Rahman et al., 2012). Also, these two variable produce distinct clusters by bean type, which is helpful in classifying the datapoints (as seen later on in *Figure 1*)."
    ]
   },
   {
@@ -1215,8 +1174,18 @@
     "\n",
     "- Koklu, M., & Ozkan, I. A. (2020). Multiclass classification of dry beans using computer vision and machine learning techniques. Computers and Electronics in Agriculture, 174, 105507. https://doi.org/10.1016/j.compag.2020.105507\n",
     "\n",
-    "- Arlot, S., & Celisse, A. (2010). *A survey of cross-validation procedures for model selection*."
+    "- Arlot, S., & Celisse, A. (2010). *A survey of cross-validation procedures for model selection*.\n",
+    "\n",
+    "- Rahman, M. M., Abdullah, A. F., Hussain, M. A., & Asrul, A. (2012). Classification of five types of common beans using image analysis. Journal of Food Engineering, 109(2), 215-223. https://doi.org/10.1016/j.jfoodeng.2011.10.005\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c650819-5448-433b-9b06-e8607a8034be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
